[gd_scene load_steps=6 format=2]

[ext_resource path="res://fonts/big-david.tres" type="DynamicFont" id=1]
[ext_resource path="res://letter-set-editor/letter-data-item.gd" type="Script" id=2]

[sub_resource type="Animation" id=2]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}

[sub_resource type="Animation" id=3]
resource_name = "blink"
length = 1.2
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.6 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0, 0, 0, 1 )
draw_center = false

[node name="LetterDataItem" type="PanelContainer"]
margin_right = 134.0
margin_bottom = 162.0
rect_min_size = Vector2( 120, 0 )
focus_mode = 2
script = ExtResource( 2 )

[node name="VBox" type="VBoxContainer" parent="."]
margin_left = 7.0
margin_top = 7.0
margin_right = 127.0
margin_bottom = 155.0
focus_mode = 2

[node name="Glyph" type="Label" parent="VBox"]
margin_right = 120.0
margin_bottom = 120.0
rect_min_size = Vector2( 120, 120 )
mouse_filter = 1
custom_colors/font_color = Color( 0, 0, 0.501961, 1 )
custom_fonts/font = ExtResource( 1 )
text = "◊ê"
align = 1
valign = 1

[node name="EditButtonsVBox" type="VBoxContainer" parent="VBox/Glyph"]
visible = false
anchor_left = 1.0
anchor_right = 1.0
margin_left = -12.0
margin_bottom = 44.0
grow_horizontal = 0

[node name="GlyphEditButton" type="Button" parent="VBox/Glyph/EditButtonsVBox"]
margin_right = 20.0
margin_bottom = 20.0
hint_tooltip = "Change glyph"
text = "E"
__meta__ = {
"_editor_description_": "Change glyph"
}

[node name="GlyphSaveButton" type="Button" parent="VBox/Glyph/EditButtonsVBox"]
visible = false
margin_top = 24.0
margin_right = 20.0
margin_bottom = 44.0
hint_tooltip = "Save glyph"
text = "S"

[node name="DeleteButton" type="Button" parent="VBox/Glyph/EditButtonsVBox"]
margin_top = 24.0
margin_right = 20.0
margin_bottom = 44.0
hint_tooltip = "Delete letter"
text = "X"

[node name="GlyphCursor" type="ColorRect" parent="VBox/Glyph"]
visible = false
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 26.0
margin_right = -26.0
margin_bottom = -18.0
grow_horizontal = 2
grow_vertical = 0
rect_min_size = Vector2( 0, 8 )

[node name="GlyphAnimationPlayer" type="AnimationPlayer" parent="VBox/Glyph/GlyphCursor"]
anims/RESET = SubResource( 2 )
anims/blink = SubResource( 3 )

[node name="NameTabber" type="TabContainer" parent="VBox"]
margin_top = 124.0
margin_right = 120.0
margin_bottom = 148.0
custom_styles/panel = SubResource( 1 )
tabs_visible = false
use_hidden_tabs_for_min_size = true

[node name="NameView" type="Label" parent="VBox/NameTabber"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 1
size_flags_horizontal = 3
size_flags_vertical = 1
text = "aleph"
align = 1
valign = 1

[node name="FocusedNameHBox" type="HBoxContainer" parent="VBox/NameTabber"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0

[node name="FocusedNameFiller" type="Control" parent="VBox/NameTabber/FocusedNameHBox"]
margin_right = 19.0
margin_bottom = 20.0
rect_min_size = Vector2( 19, 0 )

[node name="FocusedNameView" type="Label" parent="VBox/NameTabber/FocusedNameHBox"]
margin_left = 23.0
margin_right = 97.0
margin_bottom = 20.0
mouse_filter = 1
size_flags_horizontal = 3
size_flags_vertical = 1
text = "aleph"
align = 1
valign = 1

[node name="NameEditButton" type="Button" parent="VBox/NameTabber/FocusedNameHBox"]
margin_left = 101.0
margin_right = 120.0
margin_bottom = 20.0
hint_tooltip = "Edit name"
text = "E"
icon_align = 1

[node name="EditNameHBox" type="HBoxContainer" parent="VBox/NameTabber"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="EditNameFiller" type="Control" parent="VBox/NameTabber/EditNameHBox"]
margin_right = 19.0
margin_bottom = 24.0
rect_min_size = Vector2( 19, 0 )

[node name="NameEditor" type="LineEdit" parent="VBox/NameTabber/EditNameHBox"]
margin_left = 23.0
margin_right = 97.0
margin_bottom = 24.0
size_flags_horizontal = 3
text = "aleph"
align = 1

[node name="NameSaveButton" type="Button" parent="VBox/NameTabber/EditNameHBox"]
margin_left = 101.0
margin_right = 120.0
margin_bottom = 24.0
hint_tooltip = "Save"
text = "S"

[connection signal="focus_entered" from="." to="." method="_on_LetterDataItem_focus_entered"]
[connection signal="focus_exited" from="." to="." method="_on_LetterDataItem_focus_exited"]
[connection signal="gui_input" from="." to="." method="_on_LetterDataItem_gui_input"]
[connection signal="pressed" from="VBox/Glyph/EditButtonsVBox/GlyphEditButton" to="." method="_on_GlyphEditButton_pressed"]
[connection signal="pressed" from="VBox/Glyph/EditButtonsVBox/GlyphSaveButton" to="." method="_on_GlyphSaveButton_pressed"]
[connection signal="pressed" from="VBox/NameTabber/FocusedNameHBox/NameEditButton" to="." method="_on_NameEditButton_pressed"]
[connection signal="focus_exited" from="VBox/NameTabber/EditNameHBox/NameEditor" to="." method="_on_NameEditor_focus_exited"]
[connection signal="text_entered" from="VBox/NameTabber/EditNameHBox/NameEditor" to="." method="_on_NameEditor_text_entered"]
[connection signal="pressed" from="VBox/NameTabber/EditNameHBox/NameSaveButton" to="." method="_on_NameSaveButton_pressed"]
